v 1.0 реализация search